[package]
name = "alkanes-bonding-curve-token"
version = "0.0.0"
description = "A bonding curve token for Alkanes that mints all tokens to the deployer on initialization."
edition = "2021"
license = "MIT"
homepage = "https://alkanes.io"
repository = "https://github.com/AlkanesAI/alkanes"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test = []

[dependencies]
alkanes-support = { workspace = true }
alkanes-runtime = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { workspace = true } # Kept for now, build might show unused
alkanes-std-factory-support = { workspace = true }
ordinals = { workspace = true } # Kept for now, build might show unused
anyhow = { workspace = true }
bitcoin = { workspace = true } # Kept for now, build might show unused
